refactor(LottoTest.compareLottoNumber) : 테스트 인자 변경